# autograph

./: .gitignore  .gitmodules  .rusty-hook.toml  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build_BACKUP_32332.rs  build_BASE_32332.rs  build_LOCAL_32332.rs  deny.toml  krnl-cache.rs  rusty-hook.toml
.github/workflows/: ci.yml  continuous_integration.yml  rust.yml
_benches/: benchmarks.rs
_tests/: basics.rs  convert.rs  kmeans.rs  linalg.rs
autograph_derive/: Cargo.toml
autograph_derive/src/: lib.rs
autograph_derive/tests/: integration_tests.rs
benches/: bench_lenet5.rs  benchmarks.rs
benches/neural-network-benches/: Cargo.toml
benches/neural-network-benches/benches/: benchmarks.rs
benches/neural-network-benches/src/: autograph_backend.rs  candle_backend.rs  lib.rs  tch_backend.rs
benchmarks/neural-network/: Cargo.toml  README.md
benchmarks/neural-network/src/: autograph_trainer.rs  lib.rs  main.rs  tch_trainer.rs
book/: book.toml
book/src/: SUMMARY.md  arc-tensor.md  autograd.md  device.md  devices.md  forward.md  introduction.md  layer.md  nn.md  num.md  rw-tensor.md  tensor-base.md  tensor-view.md  tensor.md  what-is-a-neural-network.md  what-is-machine-learning.md
docs/: 404.html  arc-tensor.html  autograd.html  device.html  devices.html  forward.html  index.html  introduction.html  layer.html  nn.html  num.html  print.html  publishing.md  rw-tensor.html  searchindex.js  searchindex.json  tensor-base.html  tensor-view.html  tensor.html  what-is-a-neural-network.html  what-is-machine-learning.html
examples/: mnist_dense.rs  mnist_lenet5.rs  mnist_linear.rs  perceptron.rs
examples/cluster/kmeans/iris/: Cargo.toml
examples/cluster/kmeans/iris/src/: main.rs
examples/hello-compute/: Cargo.toml  README.md  build.rs
examples/hello-compute/builder/: Cargo.toml
examples/hello-compute/builder/shader/: Cargo.toml
examples/hello-compute/shader/: Cargo.toml
examples/hello-compute/shader/src/: lib.rs
examples/hello-compute/src/: main.rs
examples/kmeans-iris/: Cargo.toml  README.md
examples/kmeans-iris/src/: main.rs
examples/neural-network-mnist/: Cargo.toml  README.md
examples/neural-network-mnist/src/: _main.rs  main.rs
examples/neural_network/iris/: Cargo.toml
examples/neural_network/mnist/: Cargo.toml
glsl-shaders/: Cargo.toml  build.rs
glsl-shaders/src/glsl/: accuracy.comp  bias_backward.comp  binary.comp  buffer_macros.comp  cast.comp  cross_entropy_loss.comp  cross_entropy_loss_backward.comp  fill.comp  fill_u32.comp  fill_u64.comp  gemm.comp  index_select.comp  kmeans_accumulate_next_centroids.comp  kmeans_distance1.comp  kmeans_update_centroids.comp  one_hot.comp  reduce_final.comp  test_shader.comp
guides/: basic-setup.md  hello-compute.md
rust-shaders/: Cargo.toml  build.rs
rust-shaders/rust-toolchain/: Cargo.toml
rust-shaders/rust-toolchain/src/: main.rs
rust-shaders/shaders/: Cargo.toml  build.rs
rust-shaders/shaders/src/: activation.rs  atomic.rs  byte.rs  cast.rs  copy.rs  criterion.rs  fill.rs  half.rs  kernel.rs  lib.rs  linalg.rs  pool.rs  reduce.rs  reorder.rs  short.rs  util.rs
src/: _dataset.rs  _tensor.rs  autograd.rs  autograph.cl  backend.rs  buffer.rs  cpu.rs  cuda.rs  dataset.rs  datasets.rs  device.rs  error.rs  fit.rs  float.rs  float_tensor.rs  functional.rs  future.rs  glsl_shaders.rs  init.rs  iter.rs  iter_ext.rs  layer.rs  learn.rs  lib.rs  lib_old.rs  linalg.rs  loss.rs  main.rs  native.rs  neural_network.rs  nn.rs  opencl.rs  ops.rs  optim.rs  optimizer.rs  rust_shaders.rs  scalar.rs  shader.rs  tensor.rs  tests.rs  (+3 more)
src/_learn/: kmeans.rs  neural_network.rs
src/_neural_network/: autograd.rs
src/autograd/: checkpoint.rs  saved.rs
src/backend/: cpu.rs  cuda.rs  device.rs  fill.rs  gpu.rs  local.rs  native.rs  shader.rs  shader_util.rs
src/backend/local/: gpu.rs
src/buffer/: float.rs
src/cluster/: kmeans.rs
src/cuda/: common_impl.rs  error.rs  kernels.cu  kernels.ptx
src/dataset/: iris.rs  mnist.rs
src/device/: buffer.rs  engine.rs  profiler.rs  shader.rs
src/float_tensor/: linalg.rs
src/glsl/: fill.comp  gemm.comp
src/glsl/fill/: fill_u32.comp
src/layer/: builders.rs  tests.rs
src/learn/: criterion.rs  kmeans.rs  neural_network.rs
src/learn/neural_network/: autograd.rs  criterion.rs  layer.rs  optimizer.rs
src/neural_network/: autograd.rs  builders.rs  tests.rs
src/nn/: autograd.rs  builders.rs  optimizer.rs  saved.rs
src/nn/optimizer/: builders.rs
src/shaders/glsl/: accuracy_u16.spv  accuracy_u32.spv  accuracy_u8.spv  add_bf16.spv  add_f32.spv  add_i32.spv  add_u32.spv  bias_backward_bf16.spv  bias_backward_f32.spv  cross_entropy_loss_backward_bf16.spv  cross_entropy_loss_backward_f32.spv  cross_entropy_loss_bf16_1024.spv  cross_entropy_loss_bf16_256.spv  cross_entropy_loss_bf16_64.spv  cross_entropy_loss_f32_1024.spv  cross_entropy_loss_f32_256.spv  cross_entropy_loss_f32_64.spv  fill_f32.spv  fill_f64.spv  fill_u16.spv  fill_u32.spv  fill_u64.spv  fill_u8.spv  gemm_bf16.spv  gemm_bf16_as_f32.spv  gemm_bias_bf16.spv  gemm_bias_bf16_as_f32.spv  gemm_bias_f32.spv  gemm_bias_relu_bf16.spv  gemm_bias_relu_bf16_as_f32.spv  gemm_bias_relu_f32.spv  gemm_f32.spv  gemm_f64.spv  gemm_i32.spv  gemm_i64.spv  gemm_relu_bf16.spv  gemm_relu_bf16_as_f32.spv  gemm_relu_f32.spv  gemm_u32.spv  gemm_u64.spv  (+79 more)
src/shaders/rust/: activation::relu_backward_bf16.spv  activation::relu_backward_f32.spv  activation::relu_bf16.spv  activation::relu_f32.spv  activation__relu_backward_bf16.spv  activation__relu_backward_f32.spv  activation__relu_bf16.spv  activation__relu_f32.spv  atomic::tests::atomic_add_f32.spv  atomic__tests__atomic_add_f32.spv  cast::scale_bf16_bf16.spv  cast::scale_bf16_f32.spv  cast::scale_bf16_i32.spv  cast::scale_bf16_u32.spv  cast::scale_f32_bf16.spv  (+130 more)
src/tensor/: _reduce.rs  accuracy.rs  binary.rs  convert.rs  dot.rs  float.rs  float_tensor.rs  gemm.rs  index_select.rs  linalg.rs  ops.rs  parallel.rs  reduce.rs  reorder.rs
tests/: basics.rs  convert.rs  gemm.rs  integration_tests.rs  kmeans.rs  linalg.rs  reduce.rs
(+3 files in other folders)
