[workspace]

[workspace.package]
version = "0.2.0-alpha"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
rust-version = "1.68.0"
documentation = "https://docs.rs/krnl"
readme = "README.md"
homepage = "https://github.com/charles-r-earp/autograph"
repository = "https://github.com/charles-r-earp/autograph"
license = "MIT OR Apache-2.0"
publish = false

[package]
name = "autograph"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A machine learning library for Rust."
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["neural-networks", "machine-learning", "deep-learning", "autograd", "gpu"]
categories = ["hardware-support", "science", "mathematics"]
publish.workspace = true
autobins = false 
autobenches = false

[dependencies]
krnl = { git = "https://github.com/charles-r-earp/krnl" }
anyhow = "1.0.37"
ndarray = { version = "0.15.6", default-features = false, features = ["serde"] }
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0.126", features = ["derive", "rc"] }
derive_more = { version = "0.99.11", optional = true }
thiserror = "1.0.23"
approx = "0.5.0"
prettytable-rs = "0.8.0"
bytemuck = "1.4.1"
byteorder = { version = "1.4.3", optional = true }
dirs = { version = "3.0.2", optional = true }
downloader = { version = "0.2.6", optional = true }
flate2 = { version = "1.0.20", optional = true }
half = { version = "2.1.0", features = ["num-traits", "bytemuck", "serde"] }
http = { version = "0.2.4", optional = true }
paste = "1.0.7"
dry = "0.1.1"
crunchy = { version = "0.2.2", optional = true }
static_assertions = "1.1.0"
crossbeam-channel = { version = "0.5.8", optional = true }
parking_lot = { version = "0.12.1", optional = true }
atomicbox = { version = "0.4.0", optional = true }
rayon = "1.7.0"

[dev-dependencies]
approx = "0.4.0"

ndarray = { version = "0.15.3", features = ["approx"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
libtest-mimic = "0.6.0"

[features]
default = ["device"]
device = ["krnl/device", "dep:crunchy"]
learn = []
neural-network = ["learn", "dep:crossbeam-channel", "dep:parking_lot", "dep:atomicbox", "dep:derive_more"]

[package.metadata.krnlc.dependencies]
dry = {}
paste = {}
crunchy = { default-features = false, features = ["limit_64"] }
static_assertions = {}

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false
