[package]
name = "autograph_derive"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"

[dev-dependencies]
autograph = { path = "../" }
ndarray = "0.13.1"
