[package]
name = "autograph_derive"
version = "0.1.0"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Procedural macro crate for autograph"
homepage = "https://github.com/charles-r-earp/autograph"
repository = "https://github.com/charles-r-earp/autograph"
autobins = false 
autoexamples = false
autotests = false
autobenches = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full"] }
derive-syn-parse = "0.1.5"
quote = "1.0.7"
proc-macro2 = "1.0.18"
