[package]
name = "autograph_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macros for autograph."
homepage.workspace = true
repository.workspace = true
publish.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full"] }
derive-syn-parse = "0.1.5"
quote = "1.0.7"
proc-macro2 = "1.0.18"
