[package]
name = "rust-shaders"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
publish = false

[features]
# Compile but don't update autograph/src/shaders
# Used on CI
dry-run = []

[build-dependencies]
bytemuck = "1.7.3"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/" }
spirv_cross = { version = "0.23.1", features = ["msl", "hlsl"] }
