[package]
name = "neural-network-benches"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
autobins = false 
autoexamples = false
autotests = false
autobenches = false

[dependencies]
autograph = { workspace = true, default-features = false, features = ["neural-network"] }
tch = { version = "0.12.0", optional = true }
criterion = { version = "0.4.0", default-features = false }
anyhow.workspace = true

[features]
default = ["device"]
device = ["autograph/device"]
tch = ["dep:tch"]

[[bench]]
name = "benchmarks"
harness = false
