[package]
name = "neural-network-benches"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
autograph = { workspace = true, default-features = false, features = [
    "neural-network",
] }
tch = { version = "0.12.0", optional = true }
criterion = { version = "0.4.0", default-features = false }
anyhow = { workspace = true }
bytemuck = { workspace = true, optional = true }
candle-nn = { version = "0.6.0", optional = true }
candle-core = { version = "0.6.0", optional = true }

[dev-dependencies]
num-format.workspace = true

[features]
default = ["device"]
device = ["autograph/device"]
cuda = ["candle-nn?/cuda"]
tch = ["dep:tch", "dep:bytemuck"]
candle = ["dep:candle-nn", "dep:candle-core"]

[[bench]]
name = "benchmarks"
harness = false
