[package]
name = "neural-network-benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[features]
full = ["tch"]

[dependencies]
autograph = { path = "../../", features = ["neural_network", "mnist"] }
ndarray = "0.15.3"
smol = "1.2.5"
argparse = "0.2.2"
indicatif = "0.16.2"
rand = "0.8.4"
anyhow = "1.0.51"
plotters = "0.3.1"
tch = { version = "0.6.1", optional = true }
