[package]
name = "kmeans-iris"
version = "0.1.0"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Hello Compute Example"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograph = { path = "../../", features = ["tensor", "iris"] }
ndarray = "0.15.3"
plotters = "0.3.1"
tokio = { version = "1.9.0", features = ["full"] }
