[package]
name = "neural-network-mnist"
version = "0.1.0"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Neural Network MNIST Example"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograph = { path = "../../", features = ["neural_network", "mnist"] }
ndarray = "0.15.3"
tokio = { version = "1.9.0", features = ["full"] }
smol = "1.2.5"
argparse = "0.2.2"
