[package]
name = "neural-network-mnist-example"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
autograph = { path = "../../", default-features = false, features = ["neural-network", "mnist"] }
clap = { workspace = true, features = ["derive"] }
rand = "0.8.5"
rayon.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true