[package]
name = "rust-toolchain"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.6.1", features = ["full"] }
toml = "0.5.8"
