[package]
name = "shaders"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
num-traits = { version = "0.2.14", default-features = false }
