[package]
name = "shaders"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
num-traits = { version = "0.2.14", default-features = false }
crunchy = "0.2.2"
autograph_derive = { path = "../../autograph_derive" }
paste = "1.0.7"

[build-dependencies]
anyhow = "1.0.51"
