[package]
name = "shader"
version = "0.1.0"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Hello Compute Example"
readme = "README.md"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.10", features = ["glam"] }
