[package]
name = "iris"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograph = { path = "../../../../" }
smol = "1.2.5"
# On linux you may need to install dependencies of fontkit see https://docs.rs/crate/font-kit/0.7.1
# sudo apt install pkg-config libfreetype6-dev libfontconfig1-dev
plotters = { version = "0.3.0", optional = true }
